# appgl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
appgl/: CMakeLists.txt  main.cpp
appgl/include/appgl/: appgl.hpp  application.hpp  carp.hpp  display.hpp  gl.hpp  gui.hpp  gui_events.hpp  logging.hpp  platform.hpp  shor.hpp  ui.hpp  window.hpp
appgl/include/appgl/gl/: gl.hpp
appgl/include/appgl/ui/: imgui_nodes.hpp  imgui_theme.hpp  imgui_widgets.hpp  performance.hpp
appgl/include/appgl/utils/: stats.hpp
appgl/src/: display.cpp  gl.cpp  gui.cpp  logging.cpp  platform.cpp  window.cpp
appgl/src/gl/: gl.cpp
appgl/src/ui/: imgui_nodes.cpp  imgui_theme.cpp  imgui_widgets.cpp
appgl/src/utils/: stats.cpp
example/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  carp_test.cpp
